# RAG-analysis

./: LICENSE  pyproject.toml
src/chunking/: base_chunker.py  chunk.py  fixed_chunker.py  overlap_chunker.py
src/embedding/: base_embedder.py  sentence_embedder.py
src/loaders/: base_loader.py  document.py  docx_loader.py  pdf_loader.py  txt_loader.py
src/pipeline/: retrieval_pipeline.py
src/retriever/: base_retriever.py  dense_retriever.py
src/vector_store/: base_vector_store.py  chroma_store.py
tests/: test_base_loader.py  test_chroma_store.py  test_dense_retriever.py  test_document.py  test_docx_loader.py  test_fixed_chunker.py  test_overlap_chunker.py  test_pdf_loader.py  test_retrieval_pipeline.py  test_sentence_embedder.py  test_txt_loader.py
tests/data/: sample.docx
